--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@
                                 <li><a class="nav-link" href="#"> Artist</a>
                                     <ul>
                                         <div class="dropDown-content">
-                                            <li><a href="artist/suzzyb.html">SuzzyB</a></li>
-                                            <li><a href="artist/oceill.html">Oceill</a></li>
-                                        </div>
+                                            <li><a href="artist/chancetk.html">ChanceTK</a></li>
+                                            <li><a href="artist/pictures.html">Pictures</a></li>
+                                            <li><a href="artist/suzzyb.html">SuzzyB</a></li></div>
                                     </ul>
                                 </li></div>
                                 <li ><a class="nav-link" href="genre.html"> Genre</a></li>
@@ -42,18 +42,37 @@
                 </div>
             </div>
             <div class="row" id="secondRow">
-                <div class="col-lg-4 col-md-4 col-sm-12 leftUpper">LEFT UPPER MAIN CONTENT</div>
+                <div class="col-lg-4 col-md-4 col-sm-12 leftUpper"><img id="responsive" src="images/logo.png"></div>
 
-                        <div class="col-lg-8 col-md-8 col-sm-12 rightUpper">RIGHT UPPER MAIN CONTENT</div>
+                        <div class="col-lg-8 col-md-8 col-sm-12 rightUpper">
+                            <p>
+                                <h3>3 Hombre Records</h3>
+
+                                <h4>1234 Franklin Street, Chapel Hill, NC 27514</h4>
+
+                                919-555-1212
+
+                                For more information, rates, and booking details: info@3hombre.com 
+                            </p>
+                        </div>
  
                    
     </div>
             <div class="row" id="thirdRow">
-                <div class="col-lg-12 col-sm-12 mainContent">MAIN CONTENT</div>
+                <div class="col-lg-12 col-sm-12 mainContent">
+                    <br>
+                    <img src="images/n-columbia.jpg" class="pic">
+                    <br>
+                    <p>
+                        3 Hombre Records is a group of musically-oriented entrepreneurs based out of Chapel Hill, North Carolina.  We met during our time at UNC Chapel Hill and formed a bond over our love for music.  Though our tastes may be different, the universal language drew us in together to put our combined love of the art to use.  Since forming, 3 Hombre Records has became the premiere independent label in the Triangle region, doing everything from hosting local talent demonstrations to signing the best artists coming from the area.  We pride ourselves in being genre-inclusive, defying the norm of stylistically-similar independent labels.  
+
+                    </p>
+
+                </div>
             </div>
-            <div class="row" id="fourthRow">
+<!--             <div class="row" id="fourthRow">
                 <div class="col-lg-12 col-sm-12 belowFold">BELOW FOLD CONTENT</div>
-            </div>
+            </div> -->
                         <div class="row" id="footerNavRow"><div class="col-12">
                     <nav class="navbar navbar-expand-sm navbar-light" id="footerMenu">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-menu" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle navigation">
