--- a/genre.html
+++ b/genre.html
@@ -28,9 +28,9 @@
                                 <li><a class="nav-link" href="#"> Artist</a>
                                     <ul>
                                         <div class="dropDown-content">
-                                            <li><a href="artist/suzzyb.html">SuzzyB</a></li>
-                                            <li><a href="artist/oceill.html">Oceill</a></li>
-                                        </div>
+                                            <li><a href="artist/chancetk.html">ChanceTK</a></li>
+                                            <li><a href="artist/pictures.html">Pictures</a></li>
+                                            <li><a href="artist/suzzyb.html">SuzzyB</a></li></div>
                                     </ul>
                                 </li></div>
                                 <li ><a class="nav-link" href="genre.html"> Genre</a></li>
@@ -41,19 +41,35 @@
                 </div>
             </div>
             <div class="row" id="secondRow">
-                <div class="col-lg-4 col-md-4 col-sm-12 leftUpper">LEFT UPPER SIDE</div>
-                <div class="col-lg-4 col-md-4 col-sm-12 middleUpper">MIDDLE UPPER</div>
-                <div class="col-lg-4 col-md-4 col-sm-12 rightUpper">RIGHT UPPER SIDE</div>
-            </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 leftUpper"><img id="responsive" src="images/logo.png"></div>
+
+                        <div class="col-lg-8 col-md-8 col-sm-12 rightUpper">
+                            <p>
+                                <h3>3 Hombre Records</h3>
+
+                                <ul>
+                                    <li>Hip Hop</li>
+                                    <li>Electronic Ambient Jazz</li>
+                                    <li>Metal Rock</li>
+                                </ul>
+                            </p>
+                        </div>
+ 
+                   
+    </div>
             <div class="row" id="thirdRow">
-                <div class="col-lg-6 col-md-6 col-sm-12 leftMainContent">LEFT MAIN CONTENT</div>
-                <div class="col-lg-6 col-md-6 col-sm-12 rightMainContent" >RIGHT MAIN CONTENT</div>
+                <div class="col-lg-12 col-sm-12 mainContent">
+                    <p>
+                        
+
+                    </p>
+
+                </div>
             </div>
-            <div class="row" id="fourthRow">
-                <div class="col-12 belowFold">BELOW FOLD CONTENT</div>
-            </div>
-            <div class="row" id="footerNavRow">
-                <div class="col-12">
+<!--             <div class="row" id="fourthRow">
+                <div class="col-lg-12 col-sm-12 belowFold">BELOW FOLD CONTENT</div>
+            </div> -->
+                        <div class="row" id="footerNavRow"><div class="col-12">
                     <nav class="navbar navbar-expand-sm navbar-light" id="footerMenu">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-menu" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
