--- a/artist/Pictures.html
+++ b/artist/Pictures.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Three Hombre Records: Artist: SuzzyB</title>
+    <title>Three Hombre Records: Artist: Pictures</title>
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
@@ -49,7 +49,7 @@
                                 <li><a class="nav-link" href="../index.html"> Home</a></li>
                                 <div class="dropDown">
                                 <li><a class="nav-link" href="#"> Artist</a>
-                                    <ul>
+                                   <ul>
                                         <div class="dropDown-content">
                                             <li><a href="chancetk.html">ChanceTK</a></li>
                                             <li><a href="pictures.html">Pictures</a></li>
@@ -64,16 +64,16 @@
                 </div>
             </div>
             <div class="row" id="secondRow">
-                <div class="col-lg-4 col-md-4 col-sm-12 leftUpper" id="suzzyB"><img src="../images/soloPhoto.jpg" class="responsive"></div>
+                <div class="col-lg-4 col-md-4 col-sm-12 leftUpper" id="suzzyB"><img src="../images/20151122_Eindhoven_Epic_Metal_Fest_Periphery_0047.jpg" class="responsive"></div>
 
                         <div class="col-lg-8 col-md-8 col-sm-12 rightUpper">
-                            <h1 id="mainH1">SuzzyB's Ambient Beats</h1>
-                            <h2>SuzzyB's Tracks</h2>
+                            <h1 id="mainH1">Pictures</h1>
+                            <h2>Pictures' Tracks</h2>
                             <ol>
-                                <li><a href="https://soundcloud.com/lakeyinspired/chill-day">Track One</a></li>
-                                <li><a href="https://soundcloud.com/lakeyinspired/chill-day">Track Two</a></li>
-                                <li><a href="https://soundcloud.com/lakeyinspired/chill-day">Track Three</a></li>
-                                <li><a href="https://soundcloud.com/lakeyinspired/chill-day">Track Four</a></li>
+                                <li><a href="https://soundcloud.com/oceill/repose">Track One</a></li>
+                                <li><a href="https://soundcloud.com/oceill/oceill-malaise-feat-plini">Track Two</a></li>
+                                <li><a href="https://soundcloud.com/oceill/course-bottom">Track Three</a></li>
+                                <li><a href="https://soundcloud.com/oceill/blank">Track Four</a></li>
                             </ol>
                         </div>
  
@@ -81,13 +81,11 @@
     </div>
             <div class="row" id="thirdRow">
                 <div class="col-lg-12 col-sm-12 mainContent">
-
-                    <h3>About SuzzyB and her band...</h3>
+                    <br>
+                    <h3>About Pictures</h3>
                     <p>
-                        Growing up in the South, SuzzyB started playing piano at age 6.  Her mother, a band teacher emphasized
-                        the love of music which lead to Suzzy learning how to play
-                        ten instruments.  From her Hip Hop tranisient ambient beats to her jazzy riffs,
-                        SuzzyB has made a name for herself in the electronic ambient world.  At age 21, she still has rooms to grow.
+                       Formed in 2011, Pictures met through their high school band class in suburban Durham, NC.  Following a few years of on-and-off playing as they finished their studies, they took the band full time in 2013.  It was not until 2014 with the release of their single Course Bottom, however, that they began to settle on upbeat progressive metal as their genre of choice.  Taking influence from artists like The Helix Nebula and Sithu Aye, Pictures combines djenty-progressive metal alongside heavy use of programmed virtual instruments to create a pseudo-soundtrack feel.   Following the release of their 2016 single Malaise with solo artist Plini (ex-Halcyon), Pictures made the transition from instrumental to vocally-fronted.  Their debut full-length is set to release in early 2019, marking their first Three Hombre Records release.  
+
 
                     </p>
 
