--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 leftMainContent">                
                     <br>
                    <p> 
-                        The music industry in its current state is dominated by corporate labels which control the overwhelming majority of music releases.  They hold the largest artists, biggest releases, longest tours, and the most diversity of sound.  If an artist feels they want to go independent, they are restricted to a handful of genre-specific labels.  The purpose of our site and client, Three Hombre Records, is to encourage and promote diversity amongst independent record labels by creating one free of genre-restrictions and exclusivity.  Everything from rock to hip hop to jazz to electronic is fair game at Three Hombre Records.
+                        Based in Chapel Hill, NC, 3 Hombre Records was birthed to change the landscape of music.  Our artist span several genres, creating music styles that our audience is passionate to listen to.  Whether its Hip Hop, Electronic Ambient Jazz, or Heavy Metal Rock, 3 Hombre Records brings various musical styles into the headphones.
     
                     </p></div>
                 <div class="col-lg-6 col-md-6 col-sm-12 rightMainContent" >
